--- a/src/main/resources/generator.properties
+++ b/src/main/resources/generator.properties
@@ -2,12 +2,12 @@
 
 mainPath=io.renren
 #\u5305\u540D
-package=io.renren.modules
-moduleName=generator
+package=com
+moduleName=zyb
 #\u4F5C\u8005
-author=chenshun
+author=majingjie
 #Email
-email=sunlightcs@gmail.com
+email=1334015172@qq.com
 #\u8868\u524D\u7F00(\u7C7B\u540D\u4E0D\u4F1A\u5305\u542B\u8868\u524D\u7F00)
 tablePrefix=tb_
 
