--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,9 +7,9 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     #MySQL配置
     driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/renren_fast?useUnicode=true&characterEncoding=UTF-8&useSSL=false
-    username: renren
-    password: 123456
+    url: jdbc:mysql://rm-uf6bm3k2379nuor92fo.mysql.rds.aliyuncs.com:3306/wbzyb_dev?characterEncoding=utf-8&useSSL=false
+    username: dev4wbzyb
+    password: cab0%7eff
     #oracle配置
     #    driverClassName: oracle.jdbc.OracleDriver
     #    url: jdbc:oracle:thin:@47.100.206.162:1521:xe
@@ -35,14 +35,12 @@ spring:
 mybatis:
   mapperLocations: classpath:mapper/**/*.xml
 
-
 pagehelper:
   reasonable: true
   supportMethodsArguments: true
   params: count=countSql
 
-
 #指定数据库，可选值有【mysql、oracle、sqlserver、postgresql】
-renren:
+wanbang:
   database: mysql
 
